# BabylonNativeGLFW

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  package-lock.json  package.json
Dependencies/: CMakeLists.txt
Dependencies/imgui/: CMakeLists.txt
Dependencies/imgui/Include/backends/: imgui_impl_babylon.h
Dependencies/imgui/Source/backends/: imgui_impl_babylon.cpp  imgui_impl_glfw.cpp
Scripts/: game.js
